log
Thu 25 Apr 2024 02:22:49 PM UTC: 
 tests:  0|6
total_score: 0/70
cdcffd0
Thu 25 Apr 2024 02:25:25 PM UTC: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
4b5ba39
Thu 25 Apr 2024 02:28:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b38cd74
Thu 25 Apr 2024 02:33:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ec5f9e5
Thu 25 Apr 2024 02:38:10 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
692d929
Thu 25 Apr 2024 02:38:39 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5e58bbd
Thu 25 Apr 2024 02:39:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:3: error: conversion to non-scalar type requested
   61 |   return (HashMap)map;
      |   ^~~~~~
hashmap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d52f6ce
Thu 25 Apr 2024 02:41:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d03c114
Thu 25 Apr 2024 02:42:03 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
64675d3
Thu 25 Apr 2024 02:42:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c8da1bb
Thu 25 Apr 2024 02:42:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ba287ac
Thu 25 Apr 2024 02:45:48 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
a1431b4
Thu 25 Apr 2024 02:47:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
679aa13
Thu 25 Apr 2024 02:47:56 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
688c6bc
Thu 25 Apr 2024 02:48:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d2c1d1c
Thu 25 Apr 2024 02:51:16 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
1d254c8
Thu 25 Apr 2024 02:57:33 PM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
66794b7
Thu 25 Apr 2024 02:58:05 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
2833487
Thu 25 Apr 2024 03:00:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4936329
Thu 25 Apr 2024 03:01:59 PM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
fd28973
Thu 25 Apr 2024 03:02:16 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
4164508
Thu 25 Apr 2024 03:03:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bb6bc1f
Thu 25 Apr 2024 03:15:11 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
d11a7d1
Thu 25 Apr 2024 03:19:25 PM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
f322f16
Thu 25 Apr 2024 03:24:45 PM UTC: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  5|5
total_score: 20/70
0f918e6
Thu 25 Apr 2024 03:25:28 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|4
total_score: 30/70
7c00163
Thu 25 Apr 2024 03:28:08 PM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
1a8e59c
Thu 25 Apr 2024 03:28:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
8ed4172
Thu 25 Apr 2024 03:29:02 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
63c2b06
Thu 25 Apr 2024 03:30:46 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|4
total_score: 30/70
95701bb
Thu 25 Apr 2024 03:32:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
311d508
Thu 25 Apr 2024 03:33:11 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:111:1: error: control reaches end of non-void function [-Werror=return-type]
  111 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f80845e
Thu 25 Apr 2024 03:33:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1165108
Thu 25 Apr 2024 03:34:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e03832f
Thu 25 Apr 2024 03:38:37 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
6eb8281
Thu 25 Apr 2024 03:39:02 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
2287006
Thu 25 Apr 2024 03:44:30 PM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  8|4
total_score: 30/70
ef13c7b
Thu 25 Apr 2024 03:45:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
9b0731f
Thu 25 Apr 2024 03:47:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
e2b2727
Thu 25 Apr 2024 03:47:23 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
53b1497
Thu 25 Apr 2024 03:48:31 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d98a055
Thu 25 Apr 2024 03:48:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
3644ca0
Thu 25 Apr 2024 03:49:31 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
994fbd8
Thu 25 Apr 2024 03:49:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
25d5d9a
Thu 25 Apr 2024 03:52:16 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
ecad08d
